solve chat bugs
